--- a/cyo-housesale-project/housesale_report.Rmd
+++ b/cyo-housesale-project/housesale_report.Rmd
@@ -45,7 +45,7 @@ The project studies the dataset - **House Sales in King County, USA** available 
 The dataset - **House Sales in King County, USA: Predict house price using regression** is taken from Kaggle. \
 Kaggle, a subsidiary of Google LLC, is an online community of data scientists and machine learning practitioners. Kaggle allows users to find and publish data sets, explore and build models in a web-based data-science environment, work with other data scientists and machine learning engineers, and enter competitions to solve data science challenges. \
 The dataset contains **21613** rows and **21** columns. \
-**Go to kaggle page**: *<https://www.kaggle.com/harlfoxem/housesalesprediction>**
+**Go to kaggle page**: *<https://www.kaggle.com/harlfoxem/housesalesprediction>*
 
 ## Goal of the project
 The goal of the project is to exhaustively study the dataset and get valuable insights through data processing and visualization. Furthermore different ML algorithms are used to train a model that can predict house price.
